Replace 'CM Tracking' opt out with 'Privacy Guard' checkbox Besides Cyngn not anymore there to actively track stats, it is not a good idea to even offer such an option. The current CM stats tracking checkbox is replaced by an option to enable the 'Privacy Guard' (as state of the art in LineageOS) Translations for DE, ES, FR, IT, PL, RU, ZH copied from LOS
Change-Id: I3c9ceb5871e092b17bd92705f4f748c438d8937e

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -78,4 +78,6 @@
   <string name="fingerprint_setup_backup_lock_method">Einrichtung einer sekundären Methode zum Entsperren</string>
   <string name="fingerprint_setup_add_fingerprint">Fügen Sie Ihren Fingerabdruck hinzu.</string>
   <string name="fingerprint_setup_screen_lock_setup">Die Bildschirmsperre einrichten</string>
+  <!-- Privacy Guard DE -->
+  <string name="services_os_privacy_guard"><b>Aktivieren Sie den Datenschutz</b>, um Ihre persönlichen Daten wie Kontakte, Nachrichten oder Anrufe nicht für neu installierte Anwendungen verfügbar zu machen</string>
 </resources>
