--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -78,4 +78,6 @@
   <string name="fingerprint_setup_backup_lock_method">Настроить дополнительный способ разблокировки</string>
   <string name="fingerprint_setup_add_fingerprint">Добавить ваши отпечатки</string>
   <string name="fingerprint_setup_screen_lock_setup">Настроить экран блокировки</string>
+  <!-- Privacy Guard RU -->
+  <string name="services_os_privacy_guard"><b>Включить защищённый режим,</b> чтобы ограничить доступ новых приложений к вашим персональным данным — контактам, сообщениям или журналу вызовов.</string>
 </resources>
