--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,4 +95,7 @@
     <string name="fingerprint_setup_backup_lock_method">Setup a secondary unlock method</string>
     <string name="fingerprint_setup_add_fingerprint">Add your fingerprint</string>
     <string name="fingerprint_setup_screen_lock_setup">Setup screen lock</string>
+
+    <!-- Privacy Guard -->
+    <string name="services_os_privacy_guard"><b>Enable Privacy guard</b> to make your personal data such as contacts, messages or call logs not available for newly installed apps</string>
 </resources>
