--- a/res/values-et-rEE/strings.xml
+++ b/res/values-et-rEE/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Jah</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d </xliff:g> - <xliff:g id="name">%s </xliff:g></string>
   <string name="emergency_call">Hädaabinumbril helistamine</string>
-  <string name="setup_services">Cyanogen funktsioonid</string>
+  <string name="setup_services">LineageOS funktsioonid</string>
   <string name="services_explanation" product="tablet">Need teenused töötavad sinu hüvanguks laiendades sinu tahvelarvuti võimalusi. Andmeid kasutatakse vastavalt Cyanogeni <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Need teenused töötavad sinu hüvanguks laiendades sinu nutitelefoni võimalusi. Andmeid kasutatakse vastavalt Cyanogeni <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Privaatsuspoliitika</string>
