--- a/res/values-ast-rES/strings.xml
+++ b/res/values-ast-rES/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Sí</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Llamada d\'emerxencia</string>
-  <string name="setup_services">Carauterístiques de Cyanogen</string>
+  <string name="setup_services">Carauterístiques de LineageOS</string>
   <string name="services_explanation" product="tablet">Estos servicios furrulen por ti pa estender les capacidaes de la tableta. Los datos usaránse acordies cola <xliff:g id="name" example="Privacy Policy">%s</xliff:g> de Cyanogen.</string>
   <string name="services_explanation" product="default">Estos servicios furrulen por ti pa estender les capacidaes del móvil. Los datos usaránse acordies cola <xliff:g id="name" example="Privacy Policy">%s</xliff:g> de Cyanogen.</string>
   <string name="services_privacy_policy">Política de privacidá</string>
