--- a/res/values-az-rAZ/strings.xml
+++ b/res/values-az-rAZ/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Bəli</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Fövqəladə vəziyyət zəngləri</string>
-  <string name="setup_services">Cyanogen özəllikləri</string>
+  <string name="setup_services">LineageOS özəllikləri</string>
   <string name="services_explanation" product="tablet">Bu xidmətlər planşetinizin imkanlarını artırır. Verilənlər Cyanogen\'in <xliff:g id="name" example="Privacy Policy">%s</xliff:g>\'nə uyğun olaraq istifadə ediləcək.</string>
   <string name="services_explanation" product="default">Bu xidmətlər telefonunuzun imkanlarını artırır. Verilənlər Cyanogen\'in <xliff:g id="name" example="Privacy Policy">%s</xliff:g>\'nə uyğun olaraq istifadə ediləcək.</string>
   <string name="services_privacy_policy">Gizlilik Siyasəti</string>
