--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Так</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Экстранны выклік</string>
-  <string name="setup_services">Службы Cyanogen</string>
+  <string name="setup_services">Службы LineageOS</string>
   <string name="services_explanation" product="tablet">Гэтыя службы пашыраюць магчымасці вашага планшэта. Дадзеныя будуць выкарыстоўвацца ў адпаведнасці з <xliff:g id="name" example="Privacy Policy">%s</xliff:g> Cyanogen.</string>
   <string name="services_explanation" product="default">Гэтыя службы пашыраюць магчымасці вашага тэлефона. Дадзеныя будуць выкарыстоўвацца ў адпаведнасці з <xliff:g id="name" example="Privacy Policy">%s</xliff:g> Cyanogen.</string>
   <string name="services_privacy_policy">Палітыка прыватнасці</string>
