--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Да</string>
   <string name="data_sim_name">СИМ карта<xliff:g id="sub">%d </xliff:g> - <xliff:g id="name">%s </xliff:g></string>
   <string name="emergency_call">Спешни повиквания</string>
-  <string name="setup_services">Cyanogen характеристики</string>
+  <string name="setup_services">LineageOS характеристики</string>
   <string name="services_explanation" product="tablet">Тези услуги работят за да разширят възможностите на таблета. Данните ще бъдат използвани в съгласие с Cyanogen в <xliff:g id="name" example="Privacy Policy">%s </xliff:g>.</string>
   <string name="services_explanation" product="default">Тези услуги работят за да разширят възможностите на телефона. Данните ще бъдат използвани в съгласие с Cyanogen в <xliff:g id="name" example="Privacy Policy">%s </xliff:g>.</string>
   <string name="services_privacy_policy">Декларация за поверителност</string>
