--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Sí</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Trucada d\'emergència</string>
-  <string name="setup_services">Característiques Cyanogen</string>
+  <string name="setup_services">Característiques LineageOS</string>
   <string name="services_explanation" product="tablet">Aquests serveis serveixen per ampliar les capacitats de la teva tauleta. Les dades s\'utilitzaran d\'acord amb la <xliff:g id="name" example="Privacy Policy">%s</xliff:g> de Cyanogen.</string>
   <string name="services_explanation" product="default">Aquests serveis serveixen per ampliar les capacitats del teu telèfon. Les dades s\'utilitzaran d\'acord amb la <xliff:g id="name" example="Privacy Policy">%s</xliff:g> de Cyanogen.</string>
   <string name="services_privacy_policy">Política de privacitat</string>
