--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Ano</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Tísňové volání</string>
-  <string name="setup_services">Cyanogen funkce</string>
+  <string name="setup_services">LineageOS funkce</string>
   <string name="services_explanation" product="tablet">Tyto služby rozšířují funkce vašeho tabletu. Data budou použita v souladu se zásadami ochrany osobních údajů Cyanogen <xliff:g id="name" example="Privacy Policy">%s </xliff:g>.</string>
   <string name="services_explanation" product="default">Tyto služby rozšiřují funkce vašeho telefonu. Data budou použita v souladu se zásadami ochrany osobních údajů Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Zásady ochrany osobních údajů</string>
