--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Ja</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> – <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Notruf</string>
-  <string name="setup_services">Cyanogen-Funktionen</string>
+  <string name="setup_services">LineageOS-Funktionen</string>
   <string name="services_explanation" product="tablet">Diese Dienste werden verwendet, um die Funktionen Ihres Tablets zu erweitern. Die Daten werden in Übereinstimmung mit Cyanogens <xliff:g id="name" example="Privacy Policy">%s</xliff:g> verwendet.</string>
   <string name="services_explanation" product="default">Diese Dienste werden verwendet, um die Funktionen Ihres Telefons zu erweitern. Die Daten werden in Übereinstimmung mit Cyanogens <xliff:g id="name" example="Privacy Policy">%s</xliff:g> verwendet.</string>
   <string name="services_privacy_policy">Datenschutzerklärung</string>
