--- a/res/values-eu-rES/strings.xml
+++ b/res/values-eu-rES/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Bai</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Larrialdi deia</string>
-  <string name="setup_services">Cyanogen ezaugarriak</string>
+  <string name="setup_services">LineageOS ezaugarriak</string>
   <string name="services_explanation" product="tablet">Zerbitzu hauek tabletaren gaitasunak hobetzeko zure mesedetan egiten dute lan. Datuak Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g> arabera erabiliko dira.</string>
   <string name="services_explanation" product="default">Zerbitzu hauek telefonoaren gaitasunak hobetzeko zure mesedetan egiten dute lan. Datuak Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g> arabera erabiliko dira.</string>
   <string name="services_privacy_policy">Pribatutasun politika</string>
