--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Kyllä</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Hätäpuhelu</string>
-  <string name="setup_services">Cyanogen-ominaisuudet</string>
+  <string name="setup_services">LineageOS-ominaisuudet</string>
   <string name="services_explanation" product="tablet">Nämä palvelut toimivat tablettisi ominaisuuksien parantamiseksi. Tietoja käytetään Cyanogenin <xliff:g id="name" example="Privacy Policy">%s</xliff:g> mukaisesti.</string>
   <string name="services_explanation" product="default">Nämä palvelut toimivat puhelimesi ominaisuuksien parantamiseksi. Tietoja käytetään Cyanogenin <xliff:g id="name" example="Privacy Policy">%s</xliff:g> mukaisesti.</string>
   <string name="services_privacy_policy">Tietosuojakäytännön</string>
