--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Oui</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Appel d\'urgence</string>
-  <string name="setup_services">Fonctionnalités Cyanogen</string>
+  <string name="setup_services">Fonctionnalités LineageOS</string>
   <string name="services_explanation" product="tablet">Ces services fonctionnent pour étendre les fonctionnalités de votre tablette. Les données seront utilisées conformément à la <xliff:g id="name" example="Politique de confidentialité">%s</xliff:g> de Cyanogen.</string>
   <string name="services_explanation" product="default">Ces services fonctionnent pour étendre les fonctionnalités de votre téléphone. Les données seront utilisées conformément à la <xliff:g id="name" example="Politique de confidentialité">%s</xliff:g> de Cyanogen.</string>
   <string name="services_privacy_policy">Politique de confidentialité</string>
