--- a/res/values-gl-rES/strings.xml
+++ b/res/values-gl-rES/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Si</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Chamada de emerxencia</string>
-  <string name="setup_services">Características do Cyanogen</string>
+  <string name="setup_services">Características do LineageOS</string>
   <string name="services_explanation" product="tablet">Estes servizos serven para mellorar as capacidades da súa tableta. Os datos utilizaranse de acordo coa <xliff:g id="name" example="Política de privacidade">%s</xliff:g> de Cyanogen.</string>
   <string name="services_explanation" product="default">Estes servizos serven para mellorar as capacidades do seu teléfono. Os datos utilizaranse de acordo coa <xliff:g id="name" example="Política de privacidade">%s</xliff:g> de Cyanogen.</string>
   <string name="services_privacy_policy">Política de privacidade</string>
