--- a/res/values-gu-rIN/strings.xml
+++ b/res/values-gu-rIN/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">હા</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">કટોકટીનો કૉલ</string>
-  <string name="setup_services">Cyanogen ની સુવિધાઓ</string>
+  <string name="setup_services">LineageOS ની સુવિધાઓ</string>
   <string name="services_explanation" product="tablet">આ સેવાઓ તમારા ટૅબ્લેટની ક્ષમતાઓ વિસ્તારિત કરવાનું તમારા માટે કાર્ય કરે છે. ડેટાનો ઉપયોગ Cyanogen ના <xliff:g id="name" example="Privacy Policy">%s</xliff:g> અનુસાર થશે.</string>
   <string name="services_explanation" product="default">આ સેવાઓ તમારા ફોનની ક્ષમતાઓ વિસ્તારિત કરવાનું તમારા માટે કાર્ય કરે છે. ડેટાનો ઉપયોગ Cyanogen ના <xliff:g id="name" example="Privacy Policy">%s</xliff:g> અનુસાર થશે.</string>
   <string name="services_privacy_policy">ગોપનીયતા નીતિ સાથે સહમતિ દર્શાવો છો</string>
