--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Da</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d </xliff:g> - <xliff:g id="name">%s </xliff:g></string>
   <string name="emergency_call">Hitan poziv</string>
-  <string name="setup_services">Cyanogenove značajke</string>
+  <string name="setup_services">LineageOSove značajke</string>
   <string name="services_explanation" product="tablet">Ovi servisi rade za tebe da povećaju mogućnosti tvog tableta. Podaci će biti korišteni u suglasnosti sa Cyanogenovim <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Ovi servisi rade za tebe da povećaju mogućnosti tvog telefona. Podaci će biti korišteni u suglasnosti sa Cyanogenovim <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Pravila privatnosti</string>
