--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Igen</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Segélyhívás</string>
-  <string name="setup_services">Cyanogen funkciók</string>
+  <string name="setup_services">LineageOS funkciók</string>
   <string name="services_explanation" product="tablet">Ezek a szolgáltatások azon dolgoznak, hogy kibővítsék az Ön táblagépe képességeit. Az adatok felhasználása a Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g> alapján történik.</string>
   <string name="services_explanation" product="default">Ezek a szolgáltatások azon dolgoznak, hogy kibővítsék az Ön telefonja képességeit. Az adatok felhasználása a Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g> alapján történik.</string>
   <string name="services_privacy_policy">Adatvédelmi nyilatkozat</string>
