--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Ya</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Panggilan darurat</string>
-  <string name="setup_services">Fitur Cyanogen</string>
+  <string name="setup_services">Fitur LineageOS</string>
   <string name="services_explanation" product="tablet">Layanan ini bekerja untuk Anda untuk memperluas kemampuan perangkat tablet Anda. Data akan digunakan sesuai dengan sianogen di <xliff:g id="name" example="Privacy Policy">%s </xliff:g>.</string>
   <string name="services_explanation" product="default">Layanan ini bekerja untuk Anda untuk memperluas kemampuan perangkat tablet Anda. Data akan digunakan sesuai dengan sianogen di <xliff:g id="name" example="Privacy Policy">%s </xliff:g>.</string>
   <string name="services_privacy_policy">Kebijakan privasi</string>
