--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">כן</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">שיחת חירום</string>
-  <string name="setup_services">תכונות Cyanogen</string>
+  <string name="setup_services">תכונות LineageOS</string>
   <string name="services_explanation" product="tablet">שירותים אלה פועלים עבורך כדי להרחיב את יכולות מכשיר הטאבלט שלך. המידע ישמש בכפוף ל<xliff:g id="name" example="Privacy Policy">%s</xliff:g> של Cyanogen.</string>
   <string name="services_explanation" product="default">שירותים אלה עבורך כדי להרחיב את יכולותיו של הטלפון שלך. המידע ישמש בכפוף ל<xliff:g id="name" example="Privacy Policy">%s</xliff:g> של Cyanogen.</string>
   <string name="services_privacy_policy">מדיניות הפרטיות</string>
