--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">はい</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">緊急通報</string>
-  <string name="setup_services">Cyanogenの機能</string>
+  <string name="setup_services">LineageOSの機能</string>
   <string name="services_explanation" product="tablet">これらのサービスはタブレットの機能を拡張するために動作します。データはCyanogenの<xliff:g id="name" example="Privacy Policy">%s</xliff:g>に従って使用されます。</string>
   <string name="services_explanation" product="default">これらのサービスは携帯電話の機能を拡張するために動作します。データはCyanogenの<xliff:g id="name" example="Privacy Policy">%s</xliff:g>に従って使用されます。</string>
   <string name="services_privacy_policy">プライバシーポリシー</string>
