--- a/res/values-kn-rIN/strings.xml
+++ b/res/values-kn-rIN/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">ಹೌದು</string>
   <string name="data_sim_name">ಸಿಮ್ <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">ತುರುಪರೀಸ್ಥಿತಿ ಕರೆ</string>
-  <string name="setup_services">Cyanogen ವೈಶಿಷ್ಟ್ಯಗಳು</string>
+  <string name="setup_services">LineageOS ವೈಶಿಷ್ಟ್ಯಗಳು</string>
   <string name="services_explanation" product="tablet">ಈ ಸೇವೆಗಳು ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‍ನ ಸಾಮಾರ್ಥ್ಯಗಳನ್ನು ವಿಸ್ತರಿಸಲು ನಿಮಗಾಗಿ ಕೆಲಸ ಮಾಡುತ್ತದೆ. ಡೇಟಾವನ್ನು Cyanogenನ <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ಅನುಸಾರವಾಗಿ ಉಪಯೋಗಿಸಲಾಗುತ್ತದೆ.</string>
   <string name="services_explanation" product="default">ಈ ಸೇವೆಗಳು ನಿಮ್ಮ ಫೋನ್‍ನ ಸಾಮಾರ್ಥ್ಯಗಳನ್ನು ವಿಸ್ತರಿಸಲು ನಿಮಗಾಗಿ ಕೆಲಸ ಮಾಡುತ್ತದೆ. ಡೇಟಾವನ್ನು Cyanogenನ <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ಅನುಸಾರವಾಗಿ ಉಪಯೋಗಿಸಲಾಗುತ್ತದೆ.</string>
   <string name="services_privacy_policy">ಗೌಪ್ಯತಾ ನೀತಿ</string>
