--- a/res/values-lb/strings.xml
+++ b/res/values-lb/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Jo</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Noutruff</string>
-  <string name="setup_services">Cyanogen-Funktiounen</string>
+  <string name="setup_services">LineageOS-Funktiounen</string>
   <string name="services_explanation" product="tablet">Dës Servicer gi benotzt, fir d\'Funktioune vun denger Tablet z\'erweideren. D\'Date ginn an Iwwerastëmmung mat <xliff:g id="name" example="Privacy Policy">%s</xliff:g> vu Cyanogen benotzt.</string>
   <string name="services_explanation" product="default">Dës Servicer gi benotzt, fir d\'Funktioune vun dengem Telefon z\'erweideren. D\'Date ginn an Iwwerastëmmung mat <xliff:g id="name" example="Privacy Policy">%s</xliff:g> vu Cyanogen benotzt.</string>
   <string name="services_privacy_policy">Dateschutzerklärung</string>
