--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Taip</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Pagalbos skambutis</string>
-  <string name="setup_services">„Cyanogen“ funkcijos</string>
+  <string name="setup_services">„LineageOS“ funkcijos</string>
   <string name="services_explanation" product="tablet">Šios paslaugos dirba už jus, kad išplėstu jūsų planšetinio kompiuterio galimybes. Duomenys bus naudojami pagal „Cyanogen\'s“ <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Šios paslaugos dirba už jus, kad išplėstu jūsų telefono galimybes. Duomenys bus naudojami pagal „Cyanogen\'s“ <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Privatumo politika</string>
