--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Jā</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Ārkārtas zvans</string>
-  <string name="setup_services">Cyanogen iespējas</string>
+  <string name="setup_services">LineageOS iespējas</string>
   <string name="services_explanation" product="tablet">Šie pakalpojumi darbojas, lai pavairotu Jūsu planšetdatora iespējas. Dati tiks izmantoti saskaņā ar Cyanogen <xliff:g id="name" example="Privātuma Politiku">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Šie pakalpojumi darbojas, lai papildinātu Jūsu telefona iespējas. Dati tiks izmantoti saskaņā ar Cyanogen <xliff:g id="name" example="Privātuma Politiku">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Privātuma Politika</string>
