--- a/res/values-ml-rIN/strings.xml
+++ b/res/values-ml-rIN/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">ഉണ്ട്</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">അടിയന്തര കോൾ</string>
-  <string name="setup_services">Cyanogen സവിശേഷതകൾ</string>
+  <string name="setup_services">LineageOS സവിശേഷതകൾ</string>
   <string name="services_explanation" product="tablet">നിങ്ങളുടെ ടാബ്ലെറ്റിന്റെ ക്ഷമത വിപുലപ്പെടുത്താന്‍ ഈ സേവനങ്ങൾ നിങ്ങള്‍ക്കായി പ്രവര്‍ത്തിക്കുന്നു. Cyanogen ന്റെ <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ന് അനുസൃതമായി ഡാറ്റ ഉപയോഗിക്കുന്നതാണ്.</string>
   <string name="services_explanation" product="default">നിങ്ങളുടെ ഫോണിന്റെ ക്ഷമത വിപുലപ്പെടുത്താന്‍ ഈ സേവനങ്ങൾ നിങ്ങള്‍ക്കായി പ്രവര്‍ത്തിക്കുന്നു. Cyanogen ന്റെ <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ന് അനുസൃതമായി ഡാറ്റ ഉപയോഗിക്കുന്നതാണ്.</string>
   <string name="services_privacy_policy">സ്വകാര്യതാനയം</string>
