--- a/res/values-mr-rIN/strings.xml
+++ b/res/values-mr-rIN/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">होय</string>
   <string name="data_sim_name">सिम <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">आणीबाणीचा कॉल</string>
-  <string name="setup_services">Cyanogen वैशिष्ट्ये</string>
+  <string name="setup_services">LineageOS वैशिष्ट्ये</string>
   <string name="services_explanation" product="tablet">तुमच्या टॅब्लेटवरील क्षमता विस्तारित करण्यासाठी ह्या सेवा तुमच्यासाठी काम करतात. Cyanogenच्या <xliff:g id="name" example="Privacy Policy">%s</xliff:g>नुसार डेटा वापरला जाईल.</string>
   <string name="services_explanation" product="default">तुमच्या फोनवरील क्षमता विस्तारित करण्यासाठी ह्या सेवा तुमच्यासाठी काम करतात. Cyanogenच्या <xliff:g id="name" example="Privacy Policy">%s</xliff:g>नुसार डेटा वापरला जाईल.</string>
   <string name="services_privacy_policy">गुप्तता धोरण</string>
