--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Ja</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d </xliff:g> - <xliff:g id="name">%s </xliff:g></string>
   <string name="emergency_call">Nødsamtale</string>
-  <string name="setup_services">Cyanogen funksjoner</string>
+  <string name="setup_services">LineageOS funksjoner</string>
   <string name="services_explanation" product="tablet">Disse tjenestene fungerer for deg ved å utvide funksjonaliteten til tableten. Dataene vil bli brukt i samsvar med Cyanogen\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Disse tjenestene fungere for deg ved å utvide funksjonene i telefonen. Dataene vil bli brukt i samsvar med Cyanogen\'s <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Personvern</string>
