--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Ja</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Noodoproep</string>
-  <string name="setup_services">Cyanogen-functies</string>
+  <string name="setup_services">LineageOS-functies</string>
   <string name="services_explanation" product="tablet">Deze diensten worden gebruikt om de mogelijkheden van uw tablet uit te breiden. Gegevens worden gebruikt conform de \'<xliff:g id="name" example="Privacy Policy">%s</xliff:g>\' van Cyanogen.</string>
   <string name="services_explanation" product="default">Deze diensten worden gebruikt om de mogelijkheden van uw telefoon uit te breiden. Gegevens worden gebruikt conform de \'<xliff:g id="name" example="Privacy Policy">%s</xliff:g>\' van Cyanogen.</string>
   <string name="services_privacy_policy">Privacybeleid</string>
