--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Tak</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Połączenie alarmowe</string>
-  <string name="setup_services">Funkcje Cyanogen</string>
+  <string name="setup_services">Funkcje LineageOS</string>
   <string name="services_explanation" product="tablet">Te usługi są uruchomione w celu rozszerzenia możliwości twojego tabletu. Dane będą używane zgodnie z Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Te usługi są uruchomione w celu rozszerzenia możliwości twojego telefonu. Dane będą używane zgodnie z Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Polityka Prywatności</string>
