--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Sim</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Chamada de emergência</string>
-  <string name="setup_services">Recursos do Cyanogen</string>
+  <string name="setup_services">Recursos do LineageOS</string>
   <string name="services_explanation" product="tablet">Estes serviços trabalham para estender os recursos do seu tablet. Dados serão utilizados em conformidade com a <xliff:g id="name" example="Privacy Policy">%s</xliff:g> do Cyanogen.</string>
   <string name="services_explanation" product="default">Estes serviços trabalham para estender os recursos do seu telefone. Dados serão utilizados em conformidade com o <xliff:g id="name" example="Privacy Policy">%s</xliff:g> do Cyanogen.</string>
   <string name="services_privacy_policy">Política de Privacidade</string>
