--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Да</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> — <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Экстренный вызов</string>
-  <string name="setup_services">Службы Cyanogen</string>
+  <string name="setup_services">Службы LineageOS</string>
   <string name="services_explanation" product="tablet">Эти службы расширяют возможности планшета. Данные будут использоваться в соответствии с правилами Cyanogen: <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Эти службы расширяют возможности вашего телефона. Данные будут использоваться в соответствии с <xliff:g id="name" example="Privacy Policy">%s</xliff:g> Cyanogen.</string>
   <string name="services_privacy_policy">политикой конфиденциальности</string>
