--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Áno</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Tiesňový hovor</string>
-  <string name="setup_services">Funkcie Cyanogen</string>
+  <string name="setup_services">Funkcie LineageOS</string>
   <string name="services_explanation" product="tablet">Tieto služby sú určené pre vás a rozširujú možnosti vášho tabletu. Údaje sa použijú v súlade s Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Tieto služby sú určené pre vás a rozširujú možnosti vášho telefónu. Údaje sa použijú v súlade s Cyanogen <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Ochrana osobných údajov</string>
