--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Da</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Klic v sili</string>
-  <string name="setup_services">Značilnosti Cyanogen</string>
+  <string name="setup_services">Značilnosti LineageOS</string>
   <string name="services_explanation" product="tablet">Te storitve vam omogočajo, da razširite zmogljivosti svoje tablice. Podatki se uporabijo v skladu s <xliff:g id="name" example="Privacy Policy">%s </xliff:g> Cyanogen.</string>
   <string name="services_explanation" product="default">Te storitve vam omogočajo, da razširite zmogljivosti svojega telefona. Podatki se uporabijo v skladu s <xliff:g id="name" example="Privacy Policy">%s </xliff:g> Cyanogen.</string>
   <string name="services_privacy_policy">Pravilnikom o zasebnosti</string>
