--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Да</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Хитан позив</string>
-  <string name="setup_services">Cyanogen карактеристике</string>
+  <string name="setup_services">LineageOS карактеристике</string>
   <string name="services_explanation" product="tablet">Ови сервиси раде за тебе да повећају могућности твог таблета. Подаци ће бити коришћени у сагласности са Cyanogen-овим <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Ови сервиси раде за тебе да повећају могућности твог телефона. Подаци ће бити коришћени у сагласности са Cyanogen-овим <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Политика приватности</string>
