--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Ja</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Nödsamtal</string>
-  <string name="setup_services">Cyanogen-funktioner</string>
+  <string name="setup_services">LineageOS-funktioner</string>
   <string name="services_explanation" product="tablet">Dessa tjänster ger dig fler användningsområden för din surfplatta. Datat kommer användas i överensstämmelse med Cyanogens <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_explanation" product="default">Dessa tjänster ger dig fler användningsområden för din telefon. Datat kommer användas i överensstämmelse med Cyanogens <xliff:g id="name" example="Privacy Policy">%s</xliff:g>.</string>
   <string name="services_privacy_policy">Sekretesspolicy</string>
