--- a/res/values-ta-rIN/strings.xml
+++ b/res/values-ta-rIN/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">அனுமதிக்கப்பட்டது</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">அவசரகால அழைப்பு</string>
-  <string name="setup_services">Cyanogen அம்சங்கள்</string>
+  <string name="setup_services">LineageOS அம்சங்கள்</string>
   <string name="services_explanation" product="tablet">இந்த சேவைகள் உங்கள் டேப்ளட்டின் திறன்களை விரிவுபடுத்துவதற்காக உங்களுக்காக பணிசெய்கின்றன. தரவானது Cyanogenஇன் <xliff:g id="name" example="Privacy Policy">%s</xliff:g>க்கு இணங்கி பயன்படுத்தப்படும்.</string>
   <string name="services_explanation" product="default">இந்த சேவைகள் உங்கள் தொலைப்பேசியின் திறன்களை விரிவுபடுத்துவதற்காக உங்களுக்காக பணிசெய்கின்றன. தரவானது Cyanogenஇன் <xliff:g id="name" example="Privacy Policy">%s</xliff:g>க்கு இணங்கி பயன்படுத்தப்படும்.</string>
   <string name="services_privacy_policy">தனியுரிமைக் கொள்கை</string>
