--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">ใช่</string>
   <string name="data_sim_name">ซิม <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">โทรฉุกเฉิน</string>
-  <string name="setup_services">คุณสมบัติของ Cyanogen</string>
+  <string name="setup_services">คุณสมบัติของ LineageOS</string>
   <string name="services_explanation" product="tablet">บริการเหล่านี้ทำงานเพื่อเพิ่มความสามารถให้แท็บเล็ตของคุณได้ ข้อมูลจะถูกใช้ตาม <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ของ Cyanogen</string>
   <string name="services_explanation" product="default">บริการเหล่านี้ทำงานเพื่อขยายความสามารถของโทรศัพท์ของคุณได้ ข้อมูลจะถูกใช้ตาม <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ของ Cyanogen</string>
   <string name="services_privacy_policy">นโยบายความเป็นส่วนตัว</string>
