--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">Evet</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">Acil durum çağrısı</string>
-  <string name="setup_services">Cyanogen özellikleri</string>
+  <string name="setup_services">LineageOS özellikleri</string>
   <string name="services_explanation" product="tablet">Bu hizmetler tabletinizin yeteneklerini arttırır. Veriler Cyanogen\'in <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ilkelerine uygun olarak kullanılacaktır.</string>
   <string name="services_explanation" product="default">Bu hizmetler telefonunuzun yeteneklerini arttırır. Veriler, Cyanogen\'in <xliff:g id="name" example="Privacy Policy">%s</xliff:g> ilkelerine uygun olarak kullanılacaktır.</string>
   <string name="services_privacy_policy">Gizlilik Politikası</string>
