--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">是</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">紧急电话</string>
-  <string name="setup_services">Cyanogen 功能</string>
+  <string name="setup_services">LineageOS 功能</string>
   <string name="services_explanation" product="tablet">这些服务用于扩展您的平板电脑的功能。数据将根据 Cyanogen 的 <xliff:g id="name" example="Privacy Policy">%s</xliff:g> 使用。</string>
   <string name="services_explanation" product="default">这些服务用于扩展您的手机的功能。数据将根据 Cyanogen 的 <xliff:g id="name" example="Privacy Policy">%s</xliff:g> 使用。</string>
   <string name="services_privacy_policy">隐私政策</string>
