--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -53,7 +53,7 @@
   <string name="yes">是</string>
   <string name="data_sim_name">SIM 卡 <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">緊急電話</string>
-  <string name="setup_services">Cyanogen 功能</string>
+  <string name="setup_services">LineageOS 功能</string>
   <string name="services_explanation" product="tablet">這些服務用來增強您的平板電腦功能。資料將根據 Cyanogen 的 <xliff:g id="name" example="Privacy Policy">%s</xliff:g> 來使用。</string>
   <string name="services_explanation" product="default">這些服務用來增強您的手機功能。資料將根據 Cyanogen 的 <xliff:g id="name" example="Privacy Policy">%s</xliff:g> 來使用。</string>
   <string name="services_help_improve_cm">協助改善 <xliff:g id="name" example="CyanogenMod">%s</xliff:g></string>
