--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -54,7 +54,7 @@
   <string name="yes">是</string>
   <string name="data_sim_name">SIM <xliff:g id="sub">%d</xliff:g> - <xliff:g id="name">%s</xliff:g></string>
   <string name="emergency_call">緊急電話</string>
-  <string name="setup_services">Cyanogen 功能</string>
+  <string name="setup_services">LineageOS 功能</string>
   <string name="services_explanation" product="tablet">這些服務用來增強您的平板電腦的功能。資料將根據 Cyanogen 的 <xliff:g id="name" example="Privacy Policy">%s</xliff:g> 來使用。</string>
   <string name="services_explanation" product="default">這些服務用來增強您的手機的功能。資料將根據 Cyanogen 的 <xliff:g id="name" example="Privacy Policy">%s</xliff:g> 來使用。</string>
   <string name="services_privacy_policy">隱私權政策</string>
